[package]
name = "js_engine_v8"
version = "0.1.0"
edition.workspace = true

[lints.rust]
unsafe_code = "allow"

[dependencies]
anyhow.workspace = true
log.workspace = true
tokio = { workspace = true, optional = true }
js.workspace = true
v8.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["sync"] }
