[package]
name = "css_core"
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
tracing.workspace = true
html.workspace = true
js.workspace = true
once_cell.workspace = true
css_orchestrator.workspace = true
css_text.workspace = true
css_box.workspace = true
css_display.workspace = true
css_flexbox.workspace = true
css_sizing.workspace = true
