[package]
name = "rewrite_layout_positioning"
version.workspace = true
edition.workspace = true

[dependencies]
rewrite_core = { path = "../../../core" }
rewrite_css = { path = "../../../css" }
rewrite_css_dimensional = { path = "../../../css/crates/dimensional" }
rewrite_layout_util = { path = "../util" }
rewrite_layout_size = { path = "../size" }
rewrite_layout_size_impl = { path = "../size/impls" }
rewrite_layout_offset = { path = "../offset" }
rewrite_layout_offset_impl = { path = "../offset/impls" }
rewrite_layout_margin = { path = "../margin" }
rewrite_layout_flex = { path = "../flex" }
rewrite_layout_bfc = { path = "../bfc" }
rewrite_macros = { path = "../../../macros" }

[lints]
workspace = true
